--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,8 @@
 %  e.g:
 %%    Raising the GST to 15\%\ would raise \$27 billion, a raise of 50\%
 
+% !TEX program = xelatex
+
 \documentclass{grattan}
 
 \usepackage{chngcntr}
