--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \title{Widening gaps: Technical Report}
 \author{Peter Goss and Cameron Chisholm}
 
-%\addbibresource{bibliography.bib}
+\addbibresource{bibliography.bib}
 
 \usepackage{ragged2e}
 \AtBeginDocument{\RaggedRight}  
